--- a/index.html
+++ b/index.html
@@ -1,22 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
-
 </head>
 
 <body>
-    
     <div class="background">
-
         <header>
-
             <div class="header-link">
                 <li>
                     <a href="#">home</a>
@@ -31,39 +25,37 @@
                     <a href="#">skills</a>
                 </li>
                 <button>contact me</button>
-
             </div>
-
         </header>
-
         <div class="container-text">
-
             <div class="text">
-
                 <h3>Hello, everyone</h3>
                 <h1>I'm <span>Santiago Cardoso</span></h1>
+                <h3>Backend | C/C++ | Java | Python</h3>
                 <p>I'm in my second year of studies towards
                     <br>a bachelor's degree in Computer Science
                     <br>at UDESC. I'm interested in Competitive 
                     <br>Programming, AI and Linux.<br>⠀</p>
-
                     <div class="socials">
-
-                        <a href="https://github.com/santiagocardoso"><i class="fa-brands fa-github fa-xl"></i></a>
-                        <a href="https://www.linkedin.com/in/santiagocardoso/"><i class="fa-brands fa-linkedin fa-xl"></i></a>
-                        <a href="https://www.instagram.com/santcar7/"><i class="fa-brands fa-instagram fa-xl"></i>"</a>
-                        <a href="https://twitter.com/santcar7/"><i class="fa-brands fa-twitter fa-xl"></i></a>
-
+                        <a href="https://github.com/santiagocardoso" target="_blank"><i class="fa fa-github" style="font-size:30px"></i></i></a>
+                        <a href="https://www.linkedin.com/in/santiagocardoso/" target="_blank"><i class="fa fa-linkedin-square" style="font-size:30px"></i></a>
+                        <a href="https://www.instagram.com/santcar7/" target="_blank"><i class="fa fa-instagram" style="font-size:30px"></i></a>
+                        <a href="https://twitter.com/santcar7/" target="_blank"><i class="fa fa-twitter" style="font-size:30px"></i></a>
                     </div>
-
-                    <button class="btn">about me</button>
-
             </div>
-
         </div>
-
+        <div class="slides about">
+            <h1>About <span>section</span></h1>
+        </div>
+        <div class="slides projects">
+            <h1>Projects <span>section</span></h1>
+        </div>
+        <div class="slides skills">
+            <h1>Skills <span>section</span></h1>
+        </div>
+        <div class="slides contact">
+            <h1>Contact <span>section</span></h1>
+        </div>
     </div>
-
 </body>
-
 </html>
