--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                 <h3>Backend | C/C++ | Java | Python</h3>
                 <p>I'm in my second year of studies towards
                     <br>a bachelor's degree in Computer Science
-                    <br>at UDESC. I'm interested in Competitive 
-                    <br>Programming, AI and Linux.<br>⠀</p>
+                    <br>at UDESC. I'm interested in Cybersecurity,
+                    <br>Competitive Programming, AI and Linux.<br>⠀</p>
                     <div class="socials">
                         <a href="https://github.com/santiagocardoso" target="_blank"><i class="fa fa-github" style="font-size:30px"></i></i></a>
                         <a href="https://www.linkedin.com/in/santiagocardoso/" target="_blank"><i class="fa fa-linkedin-square" style="font-size:30px"></i></a>
