--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <div class="header-link">
                 <li>
                     <a href="#background">home</a>
+
                 </li>
                 <li>
                     <a href="#about">about</a>
@@ -51,19 +52,19 @@
         </div>
         <a id="about"></a>
         <div class="slides about">
-            <h1>About <span>section</span></h1>
+            <h1>About <span>section</span>, in progress</h1>
         </div>
         <a id="projects"></a>
         <div class="slides projects">
-            <h1>Projects <span>section</span></h1>
+            <h1>Projects <span>section</span>, in progress</h1>
         </div>
         <a id="skills"></a>
         <div class="slides skills">
-            <h1>Skills <span>section</span></h1>
+            <h1>Skills <span>section</span>, in progress</h1>
         </div>
         <a id="contact"></a>
         <div class="slides contact">
-            <h1>Contact <span>section</span></h1>
+            <h1>Contact <span>section</span>, in progress</h1>
         </div>
     </div>
 
