--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                     <div class="socials">
                         <a href="https://github.com/santiagocardoso" target="_blank"><i class="fa fa-github" style="font-size:30px"></i></i></a>
                         <a href="https://www.linkedin.com/in/santiagocardoso/" target="_blank"><i class="fa fa-linkedin-square" style="font-size:30px"></i></a>
-                        <a href="https://www.instagram.com/santcar7/" target="_blank"><i class="fa fa-instagram" style="font-size:30px"></i></a>
-                        <a href="https://twitter.com/santcar7/" target="_blank"><i class="fa fa-twitter" style="font-size:30px"></i></a>
+                        <!--<a href="https://www.instagram.com/santcar7/" target="_blank"><i class="fa fa-instagram" style="font-size:30px"></i></a>
+                        <a href="https://twitter.com/santcar7/" target="_blank"><i class="fa fa-twitter" style="font-size:30px"></i></a>-->
                     </div>
             </div>
         </div>
